--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,19 +14,20 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9'
+          python-version: '3.9'  # Assure-toi que la version est correcte pour ton projet
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python -m pip install --upgrade pip  # Met à jour pip
+          pip install -r requirements.txt  # Installe les dépendances depuis requirements.txt
+          pip install pytest coverage  # Installe pytest et coverage explicitement
 
-      - name: Run tests with pytest
+      - name: Run tests
         run: |
-          pytest --cov=src
-
+          coverage run -m pytest  # Exécute pytest avec couverture de code
+          coverage report  # Affiche le rapport de couverture
